# SaitekSwitch

./: .gitignore  55-saitek.rules  BUILDING.md  CHANGELOG.md  CONFIGURATION.md  INSTALL.md  Makefile  README.md  RUNNING.md  SaitekProtocol  cessna.xml  cessna182s.xml  piper.xml  saitekswitch  saitekswitch.nas  saitekswitch.xml  startup.bat  switchdefaultconfig.xml
code/saitekswitch/: .gitignore  Cargo.toml  Makefile
code/saitekswitch/data/: cessna.xml  piper.xml
code/saitekswitch/saitekswitch/: Cargo.toml
code/saitekswitch/saitekswitch/src/: main.rs
code/saitekswitch/simulator/: Cargo.toml
code/saitekswitch/simulator/src/: lib.rs
code/saitekswitch/src/: main.rs
code/saitekswitch/src/simulator/: simulator.rs
code/saitekswitch/src/switch/: mod.rs  switch_constants.rs  switch_device.rs
code/saitekswitch/switch/: Cargo.toml
code/saitekswitch/switch/src/: lib.rs
code/saitekswitch/switch_constants/: Cargo.toml
code/saitekswitch/switch_constants/src/: lib.rs
data/: piper.xml
