[workspace]
# use 
#    RUSTFLAGS="--cfg piped" cargo build
# for the piped version

members = [
    "saitekswitch",
    "switch",
    "switch_constants",
    "simulator",
]

resolver = "2"

[workspace.dependencies]
hidapi = "1.2.5"
xml = "0.8.5"

[workspace.package]
version = "1.3.1"
authors = ["Dave Attwood <dave@attwoods.org.uk>"]
description = "Driver for Saitek Switch Panel to connect to FGFS"
edition = "2021"
rust-version = "1.65"

[profile.release]
panic = 'abort'




