[package]
name = "switch"
version = {workspace = true}
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = {  workspace = true }
xml = { workspace = true }
switch_constants = { path = "../switch_constants" }
#simulator = { path = "../simulator" }
